# Magic_Cam

./: README.md  build.gradle  package-lock.json  package.json  settings.gradle
.github/workflows/: android-ci.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  frame_generator.cpp  frame_generator.h  v4l2_native.cpp
app/src/main/java/com/virtualcamera/manager/: MainActivity.kt
app/src/main/java/com/virtualcamera/manager/rtmp/: RTMPClient.kt  RTMPFrameProcessor.kt
app/src/main/java/com/virtualcamera/manager/service/: RTMPStreamService.kt  VirtualCameraService.kt
app/src/main/java/com/virtualcamera/manager/utils/: RootUtils.kt  V4L2Utils.kt
app/src/main/res/drawable/: ic_camera_notification.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml
scripts/: cleanup-v4l2.sh  setup-v4l2.sh
